--- a/web/themes/custom/leap/sass/_header.scss
+++ b/web/themes/custom/leap/sass/_header.scss
@@ -247,7 +247,7 @@ a.logo-large {
 	.container {
 		position: relative;
 	}
-	.block:first-of-type {
+	nav {
 		@media (min-width: em(1024)) { 
 			margin-left: 90px;
 		}
